<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">微课表</string>
    <string name="main_title">微课表</string>
	<string name="main_login">登录</string>
	<string name="login_user_hint">用户名</string>
	<string name="login_passwd_hint">密码</string>
	<string name="login_forget_passwd">忘记密码?</string>
	
	<string name="class_course">课程名称</string>
	<string name="class_teacher">教师</string>
	<string name="class_place">地点</string>
	
    <string name="monday">星期一</string>
 	<string name="tuesday">星期二</string>
  	<string name="wednesday">星期三</string>
   	<string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>

    <string name="str_addClass">确认修改</string>
    <string name="start_text">微课表，方便你的生活！</string>
    <string name="start_btn">开启微课表</string>
    
</resources>